syntax = "proto3";
option go_package = ".;proto";

package proto;

service Greeter {
  rpc SayHello (HelloRequest) returns (HelloReply) {}
}

message HelloRequest {
  string name = 1;
}

message HelloReply {
 string message = 1;
}


/* 
go get -u google.golang.org/grpc@latest
go get -u google.golang.org/protobuf/cmd/protoc-gen-go
go get -u google.golang.org/grpc/cmd/protoc-gen-go-grpc
protoc.exe --go_out=. *.proto
protoc.exe --plugin=protoc-gen-go="D:\Program Files\GoExt\bin\protoc-gen-go-grpc.exe"  --go_out .  .\*.proto
*/
